versioned_docs/version-0.5.1/standard_library/cryptographic_primitives/00_hashes.md
---
title: Hash methods
description:
  Learn about the cryptographic primitives ready to use for any Noir project, including sha256, blake2s, pedersen, mimc_bn254 and mimc
keywords:
  [
    cryptographic primitives,
    Noir project,
    sha256,
    blake2s,
    pedersen,
    mimc_bn254,
    mimc,
    hash
  ]
---

# Available hashes

## sha256

Given an array of bytes, returns the resulting sha256 hash.

```rust
fn sha256(_input : [u8]) -> [u8; 32]
```

example:

```rust
fn main() {
    let x = [163, 117, 178, 149] // some random bytes
    let hash = std::hash::sha256(x);
}
```

## blake2s

Given an array of bytes, returns an array with the Blake2 hash

```rust
fn blake2s(_input : [u8]) -> [u8; 32]
```

example:

```rust
fn main() {
    let x = [163, 117, 178, 149] // some random bytes
    let hash = std::hash::blake2s(x);
}
```

## pedersen

Given an array of Fields, returns the Pedersen hash.

```rust
fn pedersen(_input : [Field]) -> [Field; 2]
```

example:

```rust
fn main() {
    let x = [163, 117, 178, 149] // some random bytes
    let hash = std::hash::pedersen(x);
}
```

## poseidon

Given an array of Fields, returns a new Field with the Poseidon Hash. Mind that you need to specify how many inputs are there to your Poseidon function.

```rust
// example for hash_1, hash_2 accepts an array of length 2, etc
fn hash_1(input: [Field; 1]) -> Field
```

example:

```rust
fn main()
{
  let hash1 = std::hash::poseidon::bn254::hash_2([1, 2]);
  constrain hash1 == 0x115cc0f5e7d690413df64c6b9662e9cf2a3617f2743245519e19607a4417189a;
}
```

## mimc_bn254 and mimc

`mimc_bn254` is `mimc`, but with hardcoded parameters for the BN254 curve. You can use it by
providing an array of Fields, and it returns a Field with the hash. You can use the `mimc` method if
you're willing to input your own constants:

```rust
fn mimc<N>(x: Field, k: Field, constants: [Field; N], exp : Field) -> Field
```

otherwise, use the `mimc_bn254` method:

```rust
fn mimc_bn254<N>(array: [Field; N]) -> Field
```

example:

```rust

fn main() {
    let x = [163, 117, 178, 149] // some random bytes
    let hash = std::hash::mimc_bn254(x);
}
```
